change logo web template with text

--- a/templates/base.html
+++ b/templates/base.html
@@ -19,7 +19,8 @@
       <div>
         <div class="brand-logo d-flex align-items-center justify-content-between">
           <a href="{{ url_for('dataset') }}" class="text-nowrap logo-img">
-            <img src="{{ url_for('static', filename='assets/images/logos/dark-logo.svg') }}" width="180" alt="" />
+            <!-- <img src="{{ url_for('static', filename='assets/images/logos/dark-logo.svg') }}" width="180" alt="" /> -->
+            <b><h5 class="text-center m-4">KNN Classifier</h5></b>
           </a>
           <div class="close-btn d-xl-none d-block sidebartoggler cursor-pointer" id="sidebarCollapse">
             <i class="ti ti-x fs-8"></i>
