add visual of confussion matrix

--- a/templates/pages/evaluasi.html
+++ b/templates/pages/evaluasi.html
@@ -4,6 +4,9 @@
 <div class="card">    
     <div class="card-body">
         <h5 class="card-title fw-semibold mb-4">confussion matrix</h5>
+        <div class="text-center">
+            <img src="{{ url_for('static', filename='/assets/images/confussion_matrix.png') }}" alt="">
+        </div>
         <div>
             <table>
                 <tr>
