Reorganize the display and logic of 'accuracy'

--- a/templates/pages/evaluasi.html
+++ b/templates/pages/evaluasi.html
@@ -32,10 +32,10 @@
 
 <div class="card">    
     <div class="card-body">
-        <h5 class="card-title fw-semibold mb-4">AKURASI</h5>
+        <h5 class="card-title fw-semibold mb-4">AKURASI: {{ akurasi }}%</h5>
         <div>
-            
-            <p>Akurasi: <b>{{ akurasi }}%</p>
+            <small>detail report</small>
+            {{ akurasi2|safe }}
         </div>
     </div>
 </div>
