--- a/templates/pages/evaluasi.html
+++ b/templates/pages/evaluasi.html
@@ -11,19 +11,19 @@
         <div>
             <table>
                 <tr>
-                    <td>True positif</td>
+                    <td>True Negatif</td>
                     <td>: {{ data.confussion_matrix[0][0] }}</td>
                 </tr>
                 <tr>
-                    <td>False positif</td>
+                    <td>False Positif</td>
                     <td>: {{ data.confussion_matrix[0][1] }}</td>
                 </tr>
                 <tr>
-                    <td>False negatif</td>
+                    <td>False Negatif</td>
                     <td>: {{ data.confussion_matrix[1][0] }}</td>
                 </tr>
                 <tr>
-                    <td>True Negatif</td>
+                    <td>True Positif</td>
                     <td>: {{ data.confussion_matrix[1][1] }}</td>
                 </tr>
             </table>
